# openclaw

./: 100-BOT-SIMULATION-GUIDE.md  ARCHITECTURE_REDESIGN.md  ARCHITECTURE_REVIEW.md  BIOLOGICAL_SYSTEM_OVERVIEW.md  BOT_COMPOSITION_FROM_CHAOS.md  BOT_NAMES_AND_PERSONALITIES.md  BOT_SIMULATION_REPORT.md  BREATH_OF_LIFE.md  CHANGELOG.md  CLEAN-PR-SUMMARY.md  CODEBASE-REVIEW.md  COMPREHENSIVE-10-ITERATION-REPORT.md  COMPREHENSIVE-5-ITERATION-REPORT.md  COMPREHENSIVE_SYSTEM_COMPARISON.md  CRITIQUE_RESPONSE_AND_ENHANCEMENTS.md  DAOIST_CODE_REVIEW_3HUN_7PO_9LAYERS.md  DEPENDENCY-RESOLUTION.md  ECOSYSTEM_STATUS.md  EXTENSIVE-REPO-REVIEW.md  FORK_ANALYSIS.md  HUMAN_BEHAVIOR_EXPANSION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  INSTINCT_REFLEX_SYSTEM.md  ITERATION-1-SUMMARY.md  LEARNING_SYSTEMS_EXPANSION.md  OPEN_SOURCE_PROJECT_COMPARISON.md  PHEROMONE_SYSTEM.md  POSITIVE_SPIRIT.md  PRD-zh-TW.md  PROPOSAL-autonomous-digital-life.md  PULL_REQUEST.md  README.md  RESEARCH_INTEGRATION_REPORT.md  SELF-AWARENESS-OPTIMIZATION.md  pnpm-lock.yaml
bot-soul-architecture/: README.md  pyproject.toml
scripts/: run-bot-simulation.ts  run-hundred-bot-simulation.ts  simulate-ten-bots.ts
src/agents/: system-prompt.ts
src/commands/: model-picker.test.ts
src/infra/: control-channel.ts  heartbeat-runner.ts  system-presence.ts
src/plugins/: hooks.ts  types.ts
src/vitality/: consciousness.ts  cultivation.ts  dynamics.ts  environment.ts  goals.ts  index.ts  prompt-context.ts  reflection.ts  self-modification.ts  soul-aspects.ts  state.ts  types.ts  vitality-loop.ts  vitality.test.ts
(+135 files in other folders)
